# haste-gapi

./: .gitignore  .travis.yml  Core.hs  LICENSE  README.md  haste-gapi.cabal  index.html
Examples/Login/: Login.hs  Test.hs  index.html
Examples/Request/: Request.hs  index.html
Examples/RequestM/: Request.hs  index.html
Haste/: GAPI.hi  GAPI.hs
Haste/GAPI/: Calendar.hs  GPlus.hs  Internals.hs  Promise.hs  Request.hs  Result.hs  Token.hs  Types.hs
Haste/GAPI/GPlus/: Person.hs
Haste/GAPI/Internals/: Promise.hs
Haste/GAPI/Request/: Batch.hs  Promise.hs  Raw.hs  RequestM.hs  Result.hs  Types.hs
doc/html/haste-gapi/: Haste-GAPI-GPlus.html  Haste-GAPI-Internals.html  Haste-GAPI-Request-Raw.html  Haste-GAPI-Types.html  doc-index.html  haste-gapi.haddock  mini_Haste-GAPI-GPlus-Person.html  mini_Haste-GAPI-Request-Raw.html  mini_Haste-GAPI-Request.html
gh-pages/doc/html/haste-gapi/: Haste-GAPI-GPlus-Person.html  Haste-GAPI-Request.html  Haste-GAPI.html  index-frames.html  index.html  mini_Haste-GAPI-GPlus.html  mini_Haste-GAPI-Internals.html  mini_Haste-GAPI-Types.html  mini_Haste-GAPI.html
