name:                haste-gapi
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Google API bindings for the Haste compiler
-- A longer description of the package.
-- description:         
license:             MIT
license-file:        LICENSE
author:              Jonathan Skårstedt

maintainer:          jonathan.skarstedt@gmail.com
-- copyright:           
category:            Web
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  Examples/
cabal-version:       >=1.10

library
  -- Modules exported by the library.
  exposed-modules:     Haste.GAPI,
                       Haste.GAPI.Request,
                       Haste.GAPI.GPlus
                                              
  -- Modules included in this library but not exported.
  other-modules:       Haste.GAPI.Request.Promise,
                       Haste.GAPI.Request.Result,
                       Haste.GAPI.Request.RequestM,
                       Haste.GAPI.Request.Types,
                       Haste.GAPI.Types,
                       Haste.GAPI.Internals 

  other-extensions:    OverloadedStrings
  build-depends: base >=4.6, data-default, transformers
  if impl(haste)
    build-depends:       haste-lib >=0.5.1, haste-prim
  else
    build-depends:       haste-compiler

  -- Directories containing source files.
  -- hs-source-dirs:      
  default-language:    Haskell2010
  